prusti-tests/tests/verify/fail/no-annotations/panic.rs
fn main() {
    panic!();  //~ ERROR panic!(..) statement might be reachable
}
